Isolated local config files used by test
- YML configs used by codeception test are moved to the Environments and
marked as untracked for the repository.
- New config-local.php is created to hold local params (DB connection
etc.)

--- a/apps/advanced/tests/codeception/backend/.gitignore
+++ b/apps/advanced/tests/codeception/backend/.gitignore
@@ -2,3 +2,8 @@
 /unit/UnitTester.php
 /functional/FunctionalTester.php
 /acceptance/AcceptanceTester.php
+# local config files copied by init
+/acceptance.suite.yml
+/codeception.yml
+/functional.suite.yml
+/unit.suite.yml
